css/styles.css
/* ... */
#developer {
    padding-top: 5px;
}

#developer img {
    width: 25px;
    height: 25px;
}

#myDescription {
    /*font-size: 20px;*/
    padding-top: 10px;
}

#landing_content button {
    margin-top: 25px;
    background: #39B27B;
    color: #FFFFFF
}

#landing_content i {
    color: #6c757d;
    margin-top: 50px;
}

/********************************** Technologies **********************************/

#skills {
    padding-top: 100px;
    /*padding-bottom: 100px;*/
}

#skill_level {
    margin-top: 50px;
    margin-bottom: 50px;
}

/* .skill_level {
    width: 20px;
    height: 20px;
} */

.skills {
    /* border: #EEEEEE solid 0.1px; */
    /* border: #262626 solid 0.1px; */

}

.skill_detail {
    display: inline;
}

.skill_detail h4 {
    margin-bottom: 25px;
}

.skill_img {
    width: 64px;
    height: 64px;
    margin-left: 15px;
    margin-bottom: 25px;
    /* background: #E0E0E0; */
    /* background: #262626; */
    padding: 10px;
}

.skill_level_img {
    position:absolute;
    bottom: 15px;
    width: 100%;
    margin-top: 50px;
    padding-right: 15px;
}

.skill_level_img img, .skill_level {
    width: 28px;
    height: 28px;
}

.skills p {
    margin-top: 20px;
}

/********************************** Projects **********************************/

#projects {
    padding-top: 100px;
    /*padding-bottom: 100px;*/
}

#project_carousel .card {
    border: none;
}

.projectdepth {
    box-shadow: 0 .5rem 1rem rgba(0,0,0,.25) !important;
}

.card-columns {
    padding-left: 15px;
    padding-right: 15px
}

.viewgithub {
    width: 100%;
    /* color: #000000; */
    margin-top: 10px;
    margin-left: 5px;
    margin-right: 5px;
}

.project_title {
    color: inherit;
    text-decoration: none;
}

.project_title:hover {
    text-decoration: none;
}

/********************************** About **********************************/

#about {
    padding-top: 100px;
}

/********************************** HireMe **********************************/

#hireme {
    padding-top: 100px;
}

#hiremesvg {
    width: 400px;
    height: 400px
}

#interested {
    font-size: 80px;
    /* color: #E0E0E0; */
    margin-bottom: 0;
    padding-bottom: 0;
}

#interested_dark {
    font-size: 80px;
    color: #333333;
    margin-bottom: 0;
    padding-bottom: 0;
}

#hire_header {
    position: relative;
    top: -20px;
}

/********************************** Footer **********************************/

footer {
    /* border-top: #EEEEEE solid 2px;
    border-top: #262626 2px solid; */
    padding-top: 10px;
}

#social_links {

}
#social_links img {
    /*margin-top: 5px;*/
    /*margin-bottom: 5px;*/
    margin-left: 10px;
    margin-right: 10px;
    width: 30px;
    height: 30px
}

/********************************** Media Queries **********************************/

 /*Extra small devices (portrait phones, less than 576px)*/
/* Iphone 6 Plus*/
@media (max-width: 575.98px) {

    .tag {
        padding: 4px;
        margin: 4px;
        font-size: 12px;
        border: solid 1px
    }

    h1 {
        font-size: 26px;
    }

    h4 {
        font-size: 14px;
    }

    h5 {
        font-size: 15px;
    }

    p {
        font-size: 14px;
    }

    #loader {
        padding-top: 50%;
    }

    #landing_content {

    }

    #hiremesvg {
        width: 200px;
        height: 200px
    }

    #hire_header {
        position: relative;
        top: -15px;
    }

    #interested {
        font-size: 50px;
    }

    .projectdepth {
        margin-left: 10px;
        margin-right: 10px;
    }

    #navbar_links {
        min-height: 100vh;
    }


    .header {
        padding-left: 0;
        padding-right: 0;
    }

    .header #navbar_links {
        background: transparent url("../assets/6001x.png");
    }

    nav .navbar-brand {
        padding-left: 10px;
        margin-right: 0;
    }

    .navbar-toggler {
        padding-right: 15px;
    }

    #hi_img {
        /*margin-top: 20px;*/
        width: 35px;
        height: 35px;
    }

    #face_img {
        width: 200px;
        height: 175px;
    }

    .skill_level_img img, .skill_level {
        width: 22px;
        height: 22px;
    }

    /*.card-columns {*/
        /*column-count: 2;*/
    /*}*/

}

 /*Small devices (landscape phones, 576px and up)*/
/* Iphone 6 Plus landscape*/
@media (min-width: 576px) and (max-width: 767.98px) {

    .tag {
        padding: 5px;
        margin: 5px;
        font-size: 13px;
        border: solid 1px
    }

    h1 {
        font-size: 27px;
    }

    h4 {
        font-size: 15px;
    }

    h5 {
        font-size: 16px;
    }

    p {
        font-size: 15px;
    }

    .header {
        padding-left: 0;
        padding-right: 0;
    }

    .header #navbar_links {
        background: rgba(0, 120, 0, 0.7) url("../assets/6001x.png");
    }

    #navbar_links {
        min-height: 100vh;
    }

    .card-columns {
        column-count: 2;
    }

    #hiremesvg {
        width: 250px;
        height: 250px
    }

    #hi_img {
        /*margin-top: 30px;*/
        width: 40px;
        height: 40px;
    }

    #face_img {
        width: 210px;
        height: 185px;
    }

    .skill_level_img img, .skill_level {
        width: 24px;
        height: 24px;
    }

}

 /*Medium devices (tablets, 768px and up)*/
/* Amzon Kindle landscape and Ipad landscape*/
@media (min-width: 768px) and (max-width: 991.98px) {

    h1 {
        font-size: 28px;
    }

    h4 {
        font-size: 17px;
    }

    h5 {
        font-size: 17px;
    }

    p {
        font-size: 16px;
    }

    .card-columns {
        column-count: 2;
    }

    #hiremesvg {
        width: 275px;
        height: 275px
    }

    #hi_img {
        /*margin-top: 40px;*/
        width: 45px;
        height: 45px;
    }

    #face_img {
        width: 220px;
        height: 190px;
    }

    .skill_level_img img, .skill_level {
        width: 26px;
        height: 26px;
    }

}
/* ... */

